# MicGuard

./: .gitignore  CLAUDE.md  README.md  RELEASING.md  build-release-FULL_Build.ps1  install-test.ps1  micguard.py  pyproject.toml  release.ps1
Docs/: .docs-driven-dev.json  AI-Development-Guide.md  Architecture.md  Auto-set-default-Microphone-vol-Main-Doc-Index.md  Dynamic-Settings.md  Feature-Template.md  Preferred-Stack.md  System-Conventions.md
Docs/Development/: Build-and-Release.md  Release-Notes.md
Docs/Features/: Device-Priority-Profiles-Hotkeys.md  Event-History.md  Fullscreen-Safe-Popups.md  Mic-EQ-Extension.md
Docs/Future/: Auto-Profile-Switch-On-App-Launch.md  Same-Monitor-Overlay-Exclusive-Fullscreen.md
Docs/Verify/: 2026_07-12_Verification-Backlog.md
Docs/superpowers/plans/: 2026-07-13-device-priority-profiles-hotkeys.md  2026-07-14-mixer-popup-active-window-boost.md  2026-07-15-mixer-nav-rolodex-meters.md  2026-07-16-mic-eq-extension.md  2026-07-17-event-history.md  2026-07-17-profile-hotkeys.md  2026-07-22-mixer-mouse-timeout-reset.md
Docs/superpowers/specs/: 2026-07-13-device-priority-profiles-hotkeys-design.md  2026-07-14-mixer-popup-active-window-boost-design.md  2026-07-15-mixer-nav-rolodex-meters-design.md  2026-07-16-mic-eq-extension-design.md  2026-07-16-same-monitor-autolearn-design.md  2026-07-17-event-history-design.md  2026-07-17-profile-hotkeys-design.md  2026-07-22-mixer-mouse-timeout-reset-design.md
tests/: test_micguard.py
