[project]
name = "micguard"
version = "1.5.0"
description = "Keeps your default Windows microphone and its volume exactly where you set them"
requires-python = ">=3.11"
dependencies = [
    "pycaw>=20240210",
    "comtypes>=1.4",
    "pystray>=0.19",
    "pillow>=10",
    "pywebview>=6.2.1",
]

[dependency-groups]
dev = [
    "pygetwindow>=0.0.9",
    "pyinstaller>=6.10",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
